--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -46,11 +46,9 @@
     box-sizing: content-box;
     width: 18px;
     height: 20px;
-    margin: 18px 16px 18px 23px;
+    margin: 17px 16px 17px 23px;
     border: none;
     background: url('../images/search.svg') no-repeat;
-    -webkit-background-size:cover;
-    background-size: contain;
 }
 
 .textinput label {
@@ -79,7 +77,7 @@
      -moz-transition: .1s linear all;
      -webkit-transition: .1s linear all;
 }
-.focus ~ .searchformsubmit{
+.focus ~ .searchformsubmit {
     background: url('../images/close.svg') no-repeat;
     -webkit-background-size: contain;
     background-size: contain;
@@ -211,7 +209,7 @@
     line-height: 22px;
     display: flex;
     align-items: center;
-    color: #AAAAAA;
+    color: #666666;
     outline: 0;
     outline-offset: 0;
     width: 100%;
