--- a/wp-content/themes/teamlab-blog-2-0/style.css
+++ b/wp-content/themes/teamlab-blog-2-0/style.css
@@ -77,6 +77,11 @@ body {
 body {
     font-family: Open Sans, Tahoma, Verdana, Arial, Helvetica, sans-serif;
 }
+/* Remove outline on the forms and links */
+:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
 
 a {
     color: #0863A3;
