--- a/wp-content/themes/teamlab-blog-2-0/css/common.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/common.css
@@ -811,6 +811,9 @@ body.desktop .button.red.disabled:visited {
   .post{
     padding: 0 15px;
   }
+  h2.entry-title:first-child{
+    padding: 0 15px;
+  }
   .entry-title{
     font-size: 24px;
   }
