--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -1412,7 +1412,7 @@ div#respond form#commentform p.submit {
 }
 
 .bg{
-    background-image: url(../images/no-results.svg);
+    background: url(../images/no-results.svg) no-repeat;
     -webkit-background-size: 100%;
     background-size: 100%;
     width: auto;
