--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -174,6 +174,31 @@
     font-style: italic;
 }
 
+/*---------Tags in single post-------*/
+
+.tagsList{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.tagsList .tagItem{
+    display:inline-block;
+    background-color:#F2F2F2;
+    margin-right: 8px;
+}
+
+.tagsList a{
+    padding: 11px 20px;
+    display: block;
+    font-size: 14px;
+    color: #616161;
+    text-decoration: none;
+}
+
+.tagsList a:hover{
+    text-decoration: underline;
+}
+
 /*---------Search in header-------*/
 .serach-header{
     position: absolute;
