--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -78,11 +78,6 @@
     background-repeat: no-repeat;
     top: 0;
     right: 0;
-    cursor: pointer;
-}
-
-.searchForm .searhButton:hover{
-    background-image: url('../images/search-hover.svg');
 }
 
 .searchForm .clearButton{
@@ -97,7 +92,6 @@
     background-repeat: no-repeat;
     top: 0;
     right: 0;
-    cursor: pointer;
 }
 
 .searchForm.hasValue .clearButton{
@@ -185,6 +179,7 @@
     display:inline-block;
     background-color:#F2F2F2;
     margin-right: 8px;
+    margin-bottom: 8px;
 }
 
 .tagsList a{
@@ -302,60 +297,94 @@
 
 /*-----------Search in footer-------*/
 
-.search-footer{
-    display: flex;
+.FooterSearchForm{
     width: 100%;
-    height: 56px;
-    background: #F9F9F9;
-    border: 1px solid #AAAAAA;
-    box-sizing: border-box;
-    border-radius: 3px;
-}
-.input-footer{
-    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 40px;
     position: relative;
+    height: 56px;
+    box-sizing: border-box;
+    border-radius: 5px;
+    background-color: #F9F9F9;
 }
 
-.input-footer input{
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
-    display: flex;
-    align-items: center;
-    color: #666666;
-    outline: 0;
-    outline-offset: 0;
+.FooterSearchForm.focus .FooterSearchInput{
+    background-color:transparent;
+}
+
+.FooterSearchForm .FooterSearchInput:hover{
+    border: 1px solid #666666;
+}
+
+.FooterSearchForm.focus .FooterSearchInput{
+    border: 1px solid #666666;
+}
+
+.FooterSearchForm .FooterSearchInput{
+    display: block;
     width: 100%;
-    margin: 16px 57px 16px 16px;
-    border: none;
-    background: #F9F9F9;
-}
-.input-footer label {
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 22px;
+    border: 1px solid #E0E0E0;
+    border-radius: 5px;
+    font-size: 18px;
+    padding: 12px 16px 0px;
     font-weight: 500;
-    color: #AAAAAA;
-    position: absolute;
-    top: 16px;
-    left: 16px;
-    height: auto;
-    pointer-events: none;
-    transition: .1s linear all;
-     -moz-transition: .1s linear all;
-     -webkit-transition: .1s linear all;
+    box-sizing: border-box;
+    color: #333;
+    outline: none;
+    height: inherit;
+    background-color: #F9F9F9;
 }
-.focus ~ label{
-      top: -3px;
-      font-size: 10px;
-    color: #666666;
-    transition: .1s linear all;
-     -moz-transition: .1s linear all;
-     -webkit-transition: .1s linear all;
+
+.FooterSearchForm .searchLabel{
+    font-size: 16px;
+    font-weight: 500;
+    color: #616161;
+    position: absolute;
+    top: 20px;
+    margin: auto;
+    left: 17px;
+    transition: .1s linear;
+    pointer-events: none;
+}
+
+.FooterSearchForm.focus .searchLabel{
+    font-size: 12px;
+    top:8px;
+}
+
+.FooterSearchForm .searhButton{
+    content: "";
+    position:absolute;
+    background-image: url('../images/search.svg');
+    background-size: 18px;
+    background-position: 50%;
+    width: 56px;
+    height: 100%;
+    background-repeat: no-repeat;
+    top: 0;
+    right: 0;
+}
+
+.FooterSearchForm .clearButton{
+    content: "";
+    position:absolute;
+    display:none;
+    background-image: url('../images/close.svg');
+    background-size: 14px;
+    background-position: 50%;
+    width: 56px;
+    height: 100%;
+    background-repeat: no-repeat;
+    top: 0;
+    right: 0;
+}
+
+.FooterSearchForm.hasValue .clearButton{
+    display:block;
+}
+
+.FooterSearchForm.hasValue .searhButton{
+    display:none;
 }
 
 /*-----------Main Container--------*/
