--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -866,15 +866,19 @@
     margin: auto;
     display: none;
 }
-
-.inputButton {
+input.inputButton{
+    outline: none;
+    border: none;
     font-family: Arial;
-    font-weight: 600;
+    font-weight: 400;
     font-size: 24px;
     line-height: 19px;
     align-items: center;
     text-align: center;
     letter-spacing: 0.02em;
+    color: #fff;
+}
+.inputButton{
     background: #FF6F3D;
     cursor: pointer;
     align-content: center;
