--- a/wp-content/themes/teamlab-blog-2-0/style.css
+++ b/wp-content/themes/teamlab-blog-2-0/style.css
@@ -19,22 +19,22 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 blockquote {
-  background: #f9f9f9;
-  border-left: 10px solid #ccc;
-  margin: 1.5em 10px;
-  padding: 0.5em 10px;
+  border-left: 3px solid #FF6F3D;
+  margin: 1.5em 0;
+  padding: 0.5em 10px 0.5em 24px;
   quotes: "\201C""\201D""\201C""\201D";
 }
 blockquote:before {
-  color: #ccc;
   content: open-quote;
-  font-size: 4em;
   line-height: 0.1em;
-  margin-right: 0.25em;
-  vertical-align: -0.4em;
+  margin-right: 0.4em;
+  vertical-align: 0.1em;
 }
 blockquote:after {
-   content: none;
+  content: close-quote;
+  line-height: 0.1em;
+  margin-left: 0.4em;
+  vertical-align: 0.1em;
 }
 blockquote p {
   display: inline;
