--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -487,6 +487,10 @@
     text-decoration: none;
     color: #444444 !important;
 }
+.widget .view-all a:hover,
+.widget .view-all a:visited{
+    text-decoration: underline;
+}
 .recent{
     display: flex;
 }
@@ -779,7 +783,7 @@
     text-align: center;
 }
 .subscribe-blue p{
-    margin-top: 24px;
+    margin-top: 16px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: normal;
@@ -794,7 +798,7 @@
     grid-template-columns: 75% 25%;
     margin: auto;
     position: relative;
-    margin: 28px 0 16px;
+    margin: 24px 0 16px;
     }
 
 .inputBox input{
@@ -854,7 +858,7 @@
     border: 1px solid #fff;
 }
 .inputBox .loader {
-    background-image: url(../images/loader.gif);
+    background: url(../images/loader.gif);
     width: 20px;
     height: 20px;
     position: absolute;
@@ -877,9 +881,10 @@ input.inputButton{
     text-align: center;
     letter-spacing: 0.02em;
     color: #fff;
+    background-color: #FF6F3D;
+
 }
 .inputButton{
-    background: #FF6F3D;
     cursor: pointer;
     align-content: center;
     height: 48px;
@@ -890,6 +895,7 @@ input.inputButton{
     -khtml-user-select: none;
     user-select: none;
     position: relative;
+    background: url(../images/Union.svg) no-repeat  50% 16px;
 }
 .inputButton:hover {
     background-color: #fda050;
@@ -908,6 +914,7 @@ input.inputButton{
     color: #333333;
     box-sizing: border-box;
     background: url(../images/newsletter.svg) no-repeat  50% 53px;
+    border: 1px solid rgba(189, 189, 189, 0.6);
 }
 .subscribe-white h4{
     margin-top: 72px;
@@ -1028,7 +1035,7 @@ input.inputButton{
     left: 0;
     right: 0;
     display: block;
-    width: 152px;
+    max-width: 200px;
     box-sizing: border-box;
     height: 56px;
     margin: 0 auto;
@@ -1145,6 +1152,8 @@ input.inputButton{
     color: #333333;
 }
 .content .button{
+    display: inline-block;
+    margin-top: 32px;
     font-family: Open Sans;
     font-style: normal;
     font-weight: bold;
