--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -1051,7 +1051,6 @@ input.inputButton{
     text-align: center;
     /* Orange */
     color: #444444;
-    background: #fff;
     border: 1px solid #AAAAAA;
     border-radius: 3px;
     box-sizing: border-box;
@@ -1065,6 +1064,63 @@ input.inputButton{
     color: #FF6F3D;
     border: 1px solid #FF6F3D;
     background: #fff;
+}
+.main_button:hover:after{
+    position: absolute;
+    left: 45%;
+    top: 25%;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    border: 4px solid #FF6F3D;
+    border-radius: 75%;
+    border-right-color: transparent;
+    animation: cssload-spin 1025ms infinite linear;
+        -o-animation: cssload-spin 1025ms infinite linear;
+        -ms-animation: cssload-spin 1025ms infinite linear;
+        -webkit-animation: cssload-spin 1025ms infinite linear;
+        -moz-animation: cssload-spin 1025ms infinite linear;
+}
+
+.main_button::after{
+    position: absolute;
+    left: 45%;
+    top: 25%;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    border: 4px solid #444444;
+    border-radius: 75%;
+    border-right-color: transparent;
+    animation: cssload-spin 1025ms infinite linear;
+        -o-animation: cssload-spin 1025ms infinite linear;
+        -ms-animation: cssload-spin 1025ms infinite linear;
+        -webkit-animation: cssload-spin 1025ms infinite linear;
+        -moz-animation: cssload-spin 1025ms infinite linear;
+}
+.main_button.change::after{
+    content: '';
+}
+
+
+@keyframes cssload-spin {
+    100%{ transform: rotate(360deg); }
+}
+
+@-o-keyframes cssload-spin {
+    100%{ -o-transform: rotate(360deg); }
+}
+
+@-ms-keyframes cssload-spin {
+    100%{ -ms-transform: rotate(360deg); }
+}
+
+@-webkit-keyframes cssload-spin {
+    100%{ -webkit-transform: rotate(360deg); }
+}
+
+@-moz-keyframes cssload-spin {
+    100%{ -moz-transform: rotate(360deg); }
 }
 
 
