--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -1081,7 +1081,29 @@
     border: 1px solid #FF6F3D;
     background: #fff;
 }
-.main_button:hover:after{
+.main_button::after,
+.load_more_results::after{
+    position: absolute;
+    left: 45%;
+    top: 25%;
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    border: 4px solid #444444;
+    border-radius: 75%;
+    border-right-color: transparent;
+    animation: cssload-spin 1025ms infinite linear;
+        -o-animation: cssload-spin 1025ms infinite linear;
+        -ms-animation: cssload-spin 1025ms infinite linear;
+        -webkit-animation: cssload-spin 1025ms infinite linear;
+        -moz-animation: cssload-spin 1025ms infinite linear;
+}
+.main_button.change::after,
+.load_more_results.change::after{
+    content: '';
+}
+.main_button:hover:after,
+.load_more_results:hover:after{
     position: absolute;
     left: 45%;
     top: 25%;
@@ -1098,25 +1120,7 @@
         -moz-animation: cssload-spin 1025ms infinite linear;
 }
 
-.main_button::after{
-    position: absolute;
-    left: 45%;
-    top: 25%;
-    width: 20px;
-    height: 20px;
-    margin: 0 auto;
-    border: 4px solid #444444;
-    border-radius: 75%;
-    border-right-color: transparent;
-    animation: cssload-spin 1025ms infinite linear;
-        -o-animation: cssload-spin 1025ms infinite linear;
-        -ms-animation: cssload-spin 1025ms infinite linear;
-        -webkit-animation: cssload-spin 1025ms infinite linear;
-        -moz-animation: cssload-spin 1025ms infinite linear;
-}
-.main_button.change::after{
-    content: '';
-}
+
 
 
 @keyframes cssload-spin {
@@ -1678,6 +1682,7 @@ div#respond form#commentform p.submit {
     margin-bottom: 61px;
 }
 .load_more_results{
+    position: relative;
     margin:64px auto 0;
     display: block;
     width: 152px;
@@ -1695,7 +1700,6 @@ div#respond form#commentform p.submit {
     text-align: center;
     /* Orange */
     color: #444444;
-    background: #fff;
     border: 1px solid #AAAAAA;
     border-radius: 3px;
     box-sizing: border-box;
@@ -1710,7 +1714,6 @@ div#respond form#commentform p.submit {
     border: 1px solid #FF6F3D;
     background: #fff;
 }
-
 /*-----------No-results on Search Page--------*/
 
 .no-results h3{
