Added recaptcha on subscribe block

--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -844,6 +844,9 @@
     color:#8BB825;
 }
 
+.recaptchaContainer .errorMessage{
+    display: none;
+}
 
 .inputBox .errorMessage{
     position: absolute;
