--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -936,6 +936,13 @@
 .inputButton.change::after{
     content: '';
 }
+.gRecaptcha{
+	width: 224px;
+	 transform: scale(.80);
+  	-webkit-transform: scale(.80);
+  	transform-origin: 0 0;
+ 	-webkit-transform-origin: 0 0;
+}
 
 
 
