--- a/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
+++ b/wp-content/themes/teamlab-blog-2-0/css/correct_style.css
@@ -118,8 +118,7 @@
     outline: 0;
     outline-offset: 0;
     width: 100%;
-    margin: 16px 57px 16px 16px;
-    border: none;
+    border: 1px solid #E1E1E1;
 }
 
 .searchformsubmit{
@@ -1616,7 +1615,7 @@ div#comments div.comments-title {
     font-size: 18px;
     font-weight: bold;
     line-height: 23px;
-    color: #999999;
+    color: #333333;
     text-transform: uppercase;
 }
 
@@ -1870,7 +1869,7 @@ div#respond div.respond-header h3.respond-title {
     font-weight: bold;
     font-size: 18px;
     text-decoration: none;
-    color: #999999;
+    color: #333333;
 }
 
 div#respond div#cancel-comment-reply {
@@ -1917,7 +1916,7 @@ div#respond form#commentform label {
     display: block;
     margin-bottom: 5px;
     font: 11px "Open Sans", "Helvetica Neue", Helvetica, Verdana, Arial, sans-serif;
-    color: #999999;
+    color: #333333;
 }
 
 div#respond form#commentform label span.important {
